kubernetes/project-4/web2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
