kubernetes/project-4/app2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: app
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
