kubernetes/project-4/app2-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web2-ingress
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: app2
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: web
      podSelector:
        matchLabels:
          app: web2
    ports:
    - protocol: TCP
      port: 80
